remove modal fade transitions
The fade in/fade out whenever we show a modal slows users down.

Also removing some delays we put into Selenium tests to account
for the time it takes for the modals to fade in or out. So on
the upside the tests will be a bit faster now.

--- a/templates/authoring-tool-modal.html
+++ b/templates/authoring-tool-modal.html
@@ -1,4 +1,4 @@
-<div id="module_authoring_tool" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="module_authoring_tool_title" aria-hidden="true" data-keyboard="false">
+<div id="module_authoring_tool" class="modal" tabindex="-1" role="dialog" aria-labelledby="module_authoring_tool_title" aria-hidden="true" data-keyboard="false">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
@@ -26,7 +26,7 @@
   </div>
 </div>
 
-<div id="question_authoring_tool" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="question_authoring_tool_title" aria-hidden="true" data-keyboard="false">
+<div id="question_authoring_tool" class="modal" tabindex="-1" role="dialog" aria-labelledby="question_authoring_tool_title" aria-hidden="true" data-keyboard="false">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
