--- a/templates/base.html
+++ b/templates/base.html
@@ -289,7 +289,7 @@
 
 {% include "bootstrap-helpers.html" %}
 
-<div id="invitation_modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="invitation_modal_title" aria-hidden="true" data-url="{% url "send_invitation" %}">
+<div id="invitation_modal" class="modal" tabindex="-1" role="dialog" aria-labelledby="invitation_modal_title" aria-hidden="true" data-url="{% url "send_invitation" %}">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
