--- a/templates/bootstrap-helpers.html
+++ b/templates/bootstrap-helpers.html
@@ -1,5 +1,5 @@
 <!-- bootstrap-helpers: typical modal dialog -->
-<div id="global_modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="global_modal_title" aria-hidden="true">
+<div id="global_modal" class="modal" tabindex="-1" role="dialog" aria-labelledby="global_modal_title" aria-hidden="true">
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
       <div class="modal-header">
