--- a/templates/project.html
+++ b/templates/project.html
@@ -447,7 +447,7 @@ h3.question-group-title {
 
 {# SETTINGS MODAL #}
 {% if not project.is_account_project or project.is_deletable %}
-<div id="project_settings" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="project_settings_title" aria-hidden="true">
+<div id="project_settings" class="modal" tabindex="-1" role="dialog" aria-labelledby="project_settings_title" aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
