add a min-height to all Quill rich text editors of about 3-4 lines
This applies to longtext questions. It would also have applied to
discussion comments but we're back on plain text boxes now.

--- a/siteapp/static/css/govready-q.css
+++ b/siteapp/static/css/govready-q.css
@@ -43,6 +43,10 @@ footer { margin-top:60px;
   color: #888;
 }
 
+.ql-editor {
+  min-height: 6em;
+}
+
 .question-answer[data-answer-type="skipped"] {
   background-color: #eeee99;
   padding: 1px 1px;
