add a new settings page for administrative functions including setting up the help squad and reviewers

--- a/siteapp/static/css/govready-q.css
+++ b/siteapp/static/css/govready-q.css
@@ -89,3 +89,7 @@ footer .container-fluid {
   background-color: rgba(255,255,255,0.1);
   padding:8px;
 }
+
+.textcomplete-item {
+  cursor: pointer;
+}
