--- a/templates/project.html
+++ b/templates/project.html
@@ -156,7 +156,7 @@ h3.question-group-title {
     </button>
 
     {% if has_outputs and 0 %}
-      <button id="review-answers" class="btn btn-sm  btn-default" onclick="window.location = '{{project.get_absolute_url|escapejs}}/outputs';">
+      <button id="related-controls" class="btn btn-sm  btn-default" onclick="window.location = '{{project.get_absolute_url|escapejs}}/outputs';">
         <i class="glyphicon glyphicon-list"></i>
         Related Controls
       </button>
