css fix on project page in row mode

--- a/templates/project.html
+++ b/templates/project.html
@@ -59,6 +59,7 @@
 {% else %}
 .question-group {
   margin: 10px 0 20px 0;
+  padding-top: 16px;
 }
 
 h2.question-column-title {
@@ -67,7 +68,7 @@ h2.question-column-title {
 h3.question-group-title {
   color: black;
   font-weight: bold;
-  padding: 16px 18px;
+  padding: 0 18px 14px 0;
   margin: 0;
 }
 
