--- a/templates/project.html
+++ b/templates/project.html
@@ -360,8 +360,8 @@ h3.question-group-title {
                           {{q.question.spec.title}}
                         {% endif %}
 
-                        {# In the rows layout mode, indicate the question's progress (only if this question can only be answered once and is answered). #}
-                        {% if layout_mode != "grid" and not q.can_start_new_task %}
+                        {# In the rows layout mode, indicate the question's progress and show a button to start or continue the task #}
+                        {% if layout_mode != "grid" %}
                           {% with task=q.task %}
                             <div class="progress" style="width:80%; height: 5px;margin: 8px 0 0 0;">
                               <div class="progress-bar progress-bar-success" role="progressbar" style="width: {{task.get_progress_percent}}%" aria-valuenow="{{task.get_progress_percent}}" aria-valuemin="0" aria-valuemax="100"></div>
