--- a/templates/question.html
+++ b/templates/question.html
@@ -128,6 +128,30 @@ label:hover .onhover { display: inline; }
               {{prompt|safe}}
             </div>
 
+            {% if example_answers %}
+              <div id="example-answers" class="well" style="margin: 35px 0; position: relative; background: none;">
+                <h2 style="margin: 0 0 8px 0">Examples</h2>
+                <div class="expandy" style="max-height: 7.25em; overflow: hidden;">
+                  <div>
+                    {% for ex in example_answers %}
+                      {% if example_answers|length > 1 %}
+                        <div><small>Example {{forloop.counter}}</small></div>
+                      {% endif %}
+                      {{ex|safe}}
+                    {% endfor %}
+                  </div>
+                </div>
+                <div class="toggler"
+                     style="margin: 0 -19px; position: absolute; bottom: 0; width: 100%; text-align: center; padding: .75em 1em .5em 1em; background: linear-gradient(0deg, white 75%, transparent); font-weight: bold;">
+                  <a
+                     href="#more"
+                     onclick="$(this).parents('.well').find('.expandy').data('original-height', $(this).parents('.well').find('.expandy').height()); $(this).parents('.well').find('.expandy').animate({ minHeight: $(this).parents('.well').find('.expandy>div').outerHeight() + $(this).parents('.well').find('.toggler').outerHeight() }); $(this).parents('.well').find('a[href=&quot;#more&quot;]').hide(); $(this).parents('.well').find('a[href=&quot;#less&quot;]').show(); return false;">Show More</a>
+                  <a href="#less"
+                     style="display: none;"
+                     onclick="$(this).parents('.well').find('.expandy').animate({ minHeight: $(this).parents('.well').find('.expandy').data('original-height') }); $(this).parents('.well').find('a[href=&quot;#less&quot;]').hide(); $(this).parents('.well').find('a[href=&quot;#more&quot;]').show(); return false;">Show Less</a>
+                </div>
+              </div>
+            {% endif %}
             {% if q.spec.type == "text" or q.spec.type == "email-address" or q.spec.type == "url" %}
               <div class="form-group">
                 <input
