on module finished page, if the user has permission to review answers add a button to go to the review page

--- a/templates/module-finished.html
+++ b/templates/module-finished.html
@@ -152,6 +152,13 @@
       </a></p>
     {% endif %}
   {% endwith %}
+
+  {% if can_review %}
+    <p><a href="{{task.project.get_absolute_url}}/list#task-{{task.id}}" class="btn btn-default">
+      <i class="glyphicon glyphicon-list"></i>
+      Review &raquo;
+    </a></p>
+  {% endif %}
 </div> <!-- / continue panel -->
 </div> <!-- focus-area-wrapper -->
 
